--- a/src/sass/modules/_cidilabs.scss
+++ b/src/sass/modules/_cidilabs.scss
@@ -7,7 +7,7 @@
 
 */
 
-.adx.kl_wrapper {
+.adx.kl_wrapper > div {
   overflow: visible !important;
 }
 
